# HumanDataGen

./: README.md
code/libLabelSkel/: CMakeLists.txt  README  mainpage.dox  manifest.xml
code/tracking/: CMakeLists.txt  rosdep.yaml  stack.xml
code/tracking/DataSynth/: CMakeLists.txt
code/tracking/DataSynth/BVHDBSparsify/: CMakeLists.txt  mainpage.dox  manifest.xml
code/tracking/DataSynth/BVHDBSparsify/include/: OptionParser.h
code/tracking/DataSynth/BVHDBSparsify/src/: source.cpp  source_openmp.cpp
code/tracking/DataSynth/BVHtoRGBD/: CMakeLists.txt  manifest.xml
code/tracking/DataSynth/BVHtoRGBD/include/: OpenGLContext.h  OptionParser.h  RGBDRenderer.h
code/tracking/DataSynth/BVHtoRGBD/src/: GLerrors.cpp  GLerrors.h  OpenGLContext.cpp  RGBDRenderer.cpp  source.cpp  source_openmp.cpp
code/tracking/DataSynth/CMUTransforms/: CMUTransforms.h
code/tracking/DataSynth/blenderScripts/: export_labels.py  export_rig.py  export_rig_smooth.py
code/tracking/DataSynth/libBVH/: CMakeLists.txt  manifest.xml
code/tracking/DataSynth/libBVH/include/libBVH/: BVHMesh.h  BVHMesh_smooth.h  BVHMotionFile.h  BVHTransforms.h  libBVH.h
code/tracking/DataSynth/libBVH/src/: BVHMesh.cpp  BVHMesh_smooth.cpp  BVHMotionFile.cpp  BVHTransforms.cpp  BVHWrite.cpp  libBVH.cpp
code/tracking/DataSynth/makehuman/: README
code/tracking/DataSynth/makehuman/blender/: blender_print_vertgroups.py  nuke_copy_indices.py
code/tracking/DataSynth/makehuman/standalone/: bodyparts.py  colormap.py  maketargetlib.py  standalone.py
code/tracking/HadoopTree/: build.xml  mainpage.dox  manifest.xml
code/tracking/HadoopTree/src/HadoopTree/: AttribLoc.java  DataTraits.java  HistogramPair.java  LabeledFeature.java  LabeledSplitPointBuff.java  SplitInfo.java  SplitPointAccum.java  ThreshHistograms.java  Tree.java  TreeBuilder.java
code/tracking/HadoopTree/src/HadoopTree/TTrain/: .TreeTrainer_sp.java.swp  Exception_TTrain.java  NodeStatus_sp.java  TreeTrainer_sp.java
code/tracking/HadoopTree/src/HadoopTree/apps/: Driver.java  MainConvertFeatToSplit.java  MainCountLabels.java  MainFindBestSplit.java  MainInMemTreeBuild.java  MainReadLsp.java  MainReadRedOutput.java  MainSplitSamples.java  MainTrainTree.java  MainUpload.java  MainUploadReducedData_sp.java  MainUpload_sp.java
code/tracking/HadoopTree/src/HadoopTree/mapredTasks/: ConvertFeatToSplit.java  CountLabels.java  FindBestSplit_sp.java  InMemTreeBuild_sp.java  ReadLsp.java  SplitSamples_sp.java
code/tracking/HadoopTree/src/HadoopTree/mapredUtils/: ChangeMapRedParam.java  JobResultException.java  JobResultListener.java  JobResultManager.java  ReadMapRedResult.java
code/tracking/Trees/: CMakeLists.txt
code/tracking/Trees/CreateConfigFiles/: CMakeLists.txt  mainpage.dox  manifest.xml
code/tracking/Trees/CreateConfigFiles/src/: source.cpp
code/tracking/Trees/TLive_pcl/: CMakeLists.txt  mainpage.dox  manifest.xml
code/tracking/Trees/TLive_pcl/launch/: run_local_rviz.launch
code/tracking/Trees/TLive_pcl/scripts/: cleanup.sh  find.sh  find_bag.sh  folders.sh  run.sh  video.sh
code/tracking/Trees/TLive_pcl/src/: README.txt  bagprocessor.cpp  defines.h  includes.h  norostest.cpp  optimzed_elec.cpp  pcdprocessor.cpp  source_multi.cpp
code/tracking/Trees/TLive_pcl/vcg/: config.vcg  config2.vcg
code/tracking/Trees/commonTrees/: README  mainpage.dox  manifest.xml
code/tracking/Trees/commonTrees/include/commonTrees/: HandleError.h  TRun.h  Tree.h
code/tracking/Trees/completePCL/: CMakeLists.txt  mainpage.dox  manifest.xml
code/tracking/Trees/completePCL/src/: openni_grabber.cpp
code/tracking/Trees/createSamples/: CMakeLists.txt  mainpage.dox  manifest.xml
code/tracking/Trees/createSamples/include/createSamples/: LabeledSplitPointBuff.h  auxFunctions.h
code/tracking/Trees/createSamples/src/: auxFunctions.cpp  source.cpp
code/tracking/Trees/libTreeLive/: manifest.xml
code/tracking/Trees/libTreeLive/src/: colorLMap.cpp
code/tracking/scripts/: collectTree.py  colorLMap.py  createToyImage.py  developTree.py  developTree_ramdisk.py  findFiles.sh  findFiles.sh.old  kbuys_run.sh  plotConfusionMat.py  readAttribFile.py  readFeatureFile.py  reffile.bvh  runBVHDBSparsify.sh  runBVHDBSparsify_omp.sh  runBVHtoRGBD.sh  runColor.sh  runCreateSamples.sh  runLabelSkel.sh  runall.sh  runlearnMRFWeights.sh  runlearnPartRelation.sh  setupSlaves.sh  variables.sh
code/tracking/scripts/configFiles/: attribLoc.txt  attribThresh.txt
code/tracking/scripts/configFiles/disfunctional/: attribLoc.txt  attribThresh.txt
results/Resulst during debugging/: README.txt  TIME_RESULTS.txt  job_history_count_wrong_labels01.html  job_result_with_correct_data.html  reduce_output_names.html  some output from InMemSplit.txt  task_output01.html
results/Results when no more errors/: README.txt  TIME_RESULTS.txt  leaf node with little data.html  leaf node with much data.html  top node data samples false.html  top node data samples true.html
